# tree-sitter-fugu

./: .gitignore  Cargo.toml  README.md  binding.gyp  example.fugu  grammar.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c  scanner.c
